[gd_scene load_steps=10 format=3 uid="uid://8noh0ok2j3p6"]

[ext_resource type="Texture2D" uid="uid://dnyo7iuwmln8j" path="res://slot-machine.png" id="1_pol4i"]
[ext_resource type="Script" path="res://slot_machine.gd" id="2_8inll"]
[ext_resource type="Texture2D" uid="uid://deee3huhhkg04" path="res://slot-icons.png" id="2_tqhxm"]
[ext_resource type="Texture2D" uid="uid://cq8nx1jdnxbu3" path="res://slot-machine-animation-blur.png" id="4_tbsa1"]
[ext_resource type="Texture2D" uid="uid://du5wqa8xhirwm" path="res://slot_hand_animation.png" id="5_ibond"]
[ext_resource type="Texture2D" uid="uid://d1m70j7r2la72" path="res://2d_lights_and_shadows_neutral_point_light.webp" id="6_bgn5b"]

[sub_resource type="Animation" id="Animation_pxxr4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rggsy"]
resource_name = "handle_swung"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 3, 4, 5, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u438j"]
_data = {
"RESET": SubResource("Animation_pxxr4"),
"handle_swung": SubResource("Animation_rggsy")
}

[node name="SlotMachine" type="Sprite2D"]
position = Vector2(167, 84)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_pol4i")
script = ExtResource("2_8inll")

[node name="Slot_1" type="Sprite2D" parent="."]
position = Vector2(-6.96831, -3.46973)
texture = ExtResource("2_tqhxm")
hframes = 5
frame = 4

[node name="Slot_1_Animation" type="Sprite2D" parent="."]
position = Vector2(-6.96831, -3.46973)
texture = ExtResource("4_tbsa1")
hframes = 31
frame = 9

[node name="Slot_2" type="Sprite2D" parent="."]
position = Vector2(0.050855, -3.46757)
texture = ExtResource("2_tqhxm")
hframes = 5
frame = 3

[node name="Slot_2_Animation" type="Sprite2D" parent="."]
position = Vector2(0.0565453, -3.4626)
texture = ExtResource("4_tbsa1")
hframes = 31
frame = 9

[node name="Slot_3" type="Sprite2D" parent="."]
position = Vector2(7.0392, -3.47133)
texture = ExtResource("2_tqhxm")
hframes = 5
frame = 2

[node name="Slot_3_Animation" type="Sprite2D" parent="."]
position = Vector2(7.0501, -3.4626)
texture = ExtResource("4_tbsa1")
hframes = 31
frame = 9

[node name="Slot_Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Handle" type="Sprite2D" parent="."]
position = Vector2(13.9986, -1.74962)
texture = ExtResource("5_ibond")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Handle"]
libraries = {
"": SubResource("AnimationLibrary_u438j")
}

[node name="Slot_1_Light" type="Node2D" parent="."]
position = Vector2(-6.99119, -3.28884)
scale = Vector2(0.0593321, 0.0312272)

[node name="Texture" type="PointLight2D" parent="Slot_1_Light"]
position = Vector2(2, -1)
color = Color(1, 0.996078, 0.996078, 0.12549)
energy = 1.15
texture = ExtResource("6_bgn5b")

[node name="Shadow" type="PointLight2D" parent="Slot_1_Light"]
position = Vector2(0, -1)
energy = 0.32
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.0470588)
shadow_filter_smooth = 3.6
texture = ExtResource("6_bgn5b")
texture_scale = 0.5

[node name="Slot_2_Light" type="Node2D" parent="."]
position = Vector2(0.00126648, -3.28884)
scale = Vector2(0.0593321, 0.0312272)

[node name="Texture" type="PointLight2D" parent="Slot_2_Light"]
position = Vector2(2, -1)
color = Color(0.619608, 0.196078, 0.396078, 1)
energy = 1.15
texture = ExtResource("6_bgn5b")

[node name="Shadow" type="PointLight2D" parent="Slot_2_Light"]
position = Vector2(0, -1)
energy = 0.32
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.0470588)
shadow_filter_smooth = 3.6
texture = ExtResource("6_bgn5b")
texture_scale = 0.5

[node name="Slot_3_Light" type="Node2D" parent="."]
position = Vector2(7.31154, -3.28884)
scale = Vector2(0.0593321, 0.0312272)

[node name="Texture" type="PointLight2D" parent="Slot_3_Light"]
position = Vector2(2, -1)
scale = Vector2(0.992059, 1)
color = Color(0, 0.411765, 0.580392, 1)
energy = 1.15
texture = ExtResource("6_bgn5b")

[node name="Shadow" type="PointLight2D" parent="Slot_3_Light"]
position = Vector2(0, -1)
energy = 0.32
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.0470588)
shadow_filter_smooth = 3.6
texture = ExtResource("6_bgn5b")
texture_scale = 0.5

[connection signal="timeout" from="Slot_Timer" to="." method="_on_slot_timer_timeout"]
